compiler/tests/fixtures/valid/trope.viv
// Trope with a membership-test condition

trope friends:
    roles:
        @a:
            as: character
        @b:
            as: character
    conditions:
        @b in @a.friends
