compiler/tests/fixtures/invalid/semantics/initiator_with_pool.viv
// Invalid: initiator role with a pool directive

action bad-pool:
    roles:
        @actor:
            as: initiator
            from: @actor.friends
